# BLUE

BLUE/BLUE 1.0/: ParaTudoFuncionar.txt  README.md  blue.py  blue_1.0_online.py  bovespa.txt  escuta.py  escuta_fala.py  fala.py  sons.py  testAPI.py  util.py
BLUE/BLUE 2.0/: aprender.py  comandos.py  dataset.py  repete.py
BLUE/BLUE 2.0/FireBase/: sqlserver.py
BLUE/BLUE 2.0/cameras/: recebeImagens.py
BLUE/BLUE 2.0/dataset/: entityAdverbios.yaml  entityCidades.yaml  entityComodos.yaml  (+10 more)
BLUE/JARVIS_2.0-main/: JARVIS_2.0.py
BLUE/maria-1.0/: Assignments 06.ipynb  labels.txt  main.py  model.h5  model1.h5
G1EA1800CV1/NUC/: Comandos e Caminhos Importantes.docx  Portmap G1EA1800CV1.xlsx  mapping_default.launch  sick_safetyscanners.launch
G1EA1800CV1/NUC/firmware-ros/firmware/: CMakeLists.txt  package.xml
G1EA1800CV1/NUC/firmware-ros/firmware/Docs/: Arquivos.txt  Caracteristicas.txt  Portmap G1RB5000 T50 versao BALL FRUTAL.xlsx  ROS_Definicoes.ods
G1EA1800CV1/NUC/firmware-ros/firmware/launch/: inicia_amcl.launch  inicia_firmware.launch
G1EA1800CV1/NUC/firmware-ros/firmware/msg/: entradas.msg  saidas.msg
G1EA1800CV1/NUC/firmware-ros/firmware/script/: .Database.swp  AGVConfig.db  Bateria.py  Carregador.py  Database.py  Direcao.py  Estados.py  G1EA1800CV1.py  Garfo.py  Iluminacao.py  Inicia_Pose.py  Inicia_Scan.py  Navegacao.py  Serial.py
G1EA1800CV1/NUC/firmware-ros/firmware/script/Comunicacao/: comunicacao_xbee.py  interface_bd.py
OpenCV/: AGVS.py  DetecçãoDeMovimento.py  Navegacao.py  gravarVideo.py  navegacao01.py  segmentacao.py  sensorOptico.py
(+13 files in other folders)
